      -- Rename classes:
         --- LibXML::Dtd::Attr -> LibXML::Dtd::AttrDecl and
         --- LibXML::Dtd::Element -> LibXML::Dtd::ElementDecl
         --- LibXML::Entity -> LibXML::Dtd::Entity
      -- Add  LibXML::Dtd elements() method
    - Fixed memory leaks in $doc.setDocumentElement and document parse failure #55
    - Fixed segfault in unlinking DtD #56
    - Fixed valgrind errors in t/07dtd.t. Specifically, $dtd.replaceChild($dtd), which
      should be a no-op.

0.6.0  2021-05-29T09:37:12+12:00
    - Fix attribute isId() method to return Bool, as documented.
    - Integration with W3C::DOM interface roles:
      -- Implementation: add createDocumentType(), hasFeature()
      -- Attr: add specified() [NYI]
      -- Node: add isSupported(), localName()
      -- Moved attributes() and hasAttributes from Element to Node
      -- NamedNodeMap: add length() method
      -- CDATASection: add splitText() [NYI]
      -- DocumentType: add entities(), notations() internalSubset [all NYI]
      -- Entity: add publicId(), systemId() and notationName() methods
      -- ProcessingInstruction: add data() method
      -- Text: add splitText() method [NYI]
    - Fixes to DtD handling #54:
      -- $doc.setExternalSubset no longer removes internal subset
      -- Reimplement $doc.setInternalSubset using xmlCreateInSubset().
         $doc.raw.setInternalSubset keeps the old behaviour

0.5.15  2021-02-24T09:45:59+13:00
    - Exported disused and bit rotted etc/libxml2-api.xml, etc/LibXML and
      etc/generator.raku to https://github.com/libxml-raku/LibXML-Raw-Gen-raku
      #51
    - Fix for dependency on latest XML #52. Replace references to
      <XML::Grammar::pident>, which (rightfully) no longer exists, with
      <XML::Grammar::name>. Detect namespaces after parsing.

0.5.14 2020-12-27
    - Fix circa Rakudo 2019.11 04node.t regression #50
0.5.13 2020-12-23
    - Fix return type of xmlSAXLocation getPublicId and getSystemId methods