@@ -155,7 +155,7 @@ enum xmlPatternFlags is export (
 );
 
 enum xmlC14NMode is export (
-    XML_C14N_1_0            => 0,    # Origianal C14N 1.0 spec
+    XML_C14N_1_0            => 0,    # Original C14N 1.0 spec
     XML_C14N_EXCLUSIVE_1_0  => 1,    # Exclusive C14N 1.0 spec
     XML_C14N_1_1            => 2     # C14N 1.1 spec
 );
