@@ -18,8 +18,9 @@
       -- Add  LibXML::Dtd elements() method
     - Fixed memory leaks in $doc.setDocumentElement and document parse failure #55
     - Fixed segfault in unlinking DtD #56
-    - Fixed valgrind errors in t/07dtd.t. Specifically, $dtd.replaceChild($dtd), which
+    - Fixed valgrind errors in t/07dtd.t. Specifically, $doc.replaceChild($dtd), which
       should be a no-op.
+    - Fix GC on entities. Don't attempt to free predefined entities.
 
 0.6.0  2021-05-29T09:37:12+12:00
     - Fix attribute isId() method to return Bool, as documented.
